// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders cyklo 1`] = `
<span>
  <img
    alt="cyklo"
    height={30}
    src="cyklo.png"
    title="cyklo"
  />
   
  cyklo
</span>
`;

exports[`renders cyklo and text 1`] = `
<span>
  <img
    alt="cyklo"
    height={30}
    src="cyklo.png"
    title="cyklo"
  />
   
  cyklo
</span>
`;

exports[`renders koloběžka with pohlaví 1`] = `
<span>
  <img
    alt="koloběžka"
    height={30}
    src="kolobezka.png"
    title="koloběžka"
  />
   
  <img
    alt="žena"
    height={28}
    src="zena.png"
    title="žena"
  />
</span>
`;

exports[`renders maraton with pohlaví and věk 1`] = `
<span>
  <img
    alt="maraton"
    height={30}
    src="maraton.png"
    title="maraton"
  />
   
  <img
    alt="muž"
    height={28}
    src="muz.png"
    title="muž"
  />
  18 - 39 let
</span>
`;

exports[`renders půlmaraton with pohlaví and věk (max) 1`] = `
<span>
  <img
    alt="půlmaraton"
    height={30}
    src="pulmaraton.png"
    title="půlmaraton"
  />
   
  <img
    alt="žena"
    height={28}
    src="zena.png"
    title="žena"
  />
  60 let a více
</span>
`;
